[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-mcp-agent-engine"
version = "0.1.0"
description = "LangGraph + langchain_mcp_adapters Agent Engine adapter with async-to-sync bridge"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-adapters>=0.2.1",
    "langchain-google-genai>=4.0.0",
    "langgraph>=0.4.0",
    "google-cloud-aiplatform>=1.56.0",
    "mcp>=1.9.2",
]
